fix: entity title contrast and chart subtitle and legend font weight

--- a/src/styles/EntityTable.scss
+++ b/src/styles/EntityTable.scss
@@ -357,7 +357,7 @@ $even-row-color: $odd-color;
         }
 
         &.table-area-name {
-          color: $color-economy;
+          color: $color-economy-dark;
           font-size: 20px;
           line-height: 36px;
           font-weight: normal;
